# auto_aim

./: .clang-format  .editorconfig  .gitignore  README.md
assets/: config.toml
assets/model/: best-8.onnx  best-8_24.onnx
docs/: Camera_Package.md  Package_camera.md  Package_py_net.md  git_commit.md
model/openvino_model/: best.xml  metadata.yaml
src/aim_armor/: CMakeLists.txt  package.xml
src/aim_armor/include/: armor_detector.hpp  armors.hpp  detector_node.hpp  lights.hpp
src/aim_armor/src/: armor_detector.cpp  detector_node.cpp  lights.cpp  tracker_node.cpp
src/aim_armor/src/test/: test1.cpp  test2.cpp
src/camera/: CMakeLists.txt  package.xml
src/camera/dependencies/HKSDK/: HKSDKConfig.cmake
src/camera/dependencies/MVSDK/: MVSDKConfig.cmake
src/camera/include/: hikvision.hpp  mindvision.hpp
src/camera/src/: gray_node.cpp  hikvision.cpp  image_node.cpp  mindvision.cpp  stream_node copy.cpp  stream_node.cpp  test_node.cpp  video_node.cpp
src/getstreamtest/: CMakeLists.txt  package.xml
src/getstreamtest/src/: getstreamtest.cpp
src/interfaces/: CMakeLists.txt  package.xml
src/interfaces/msg/: AimMode.msg  Armor.msg  Target.msg
src/py_net/: package.xml  setup.cfg  setup.py
src/py_net/py_net/: number_ov.py  test_node.py
src/serial/: CMakeLists.txt  package.xml
src/serial/include/: package.hpp  serial.hpp
src/serial/src/: serial.cpp  serial_node.cpp
src/test/: CMakeLists.txt  package.xml
src/test/src/: getstream.cpp  record.cpp
tools/: startup.sh
